--- a/cloud-consumer-feign-order/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 eureka:
   client:
-    register-with-eureka: false
+    register-with-eureka: true
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7001.com:7001/eureka #, http://eureka7002.com:7002/eureka
 
 ribbon:
   ReadTimeout:  5000
