--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloudalibaba-sentinel-service</module>
+        <module>cloud-consumer-feign-order</module>
+        <module>cloud-consumer-hystrix-order</module>
+        <module>cloud-provider-hystrix-payment</module>
+        <module>cloud-zuul-gateway</module>
+        <module>cloud-gateway-gateway</module>
+        <module>cloudalibaba-provider-payment</module>
+        <module>cloudalibaba-provider-payment9002</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
+
     </modules>
     <packaging>pom</packaging>
 
@@ -33,6 +43,14 @@
     <!--  子模块继承之后，提供作用，锁定版本+子module不用写groupId和version-->
     <dependencyManagement>
         <dependencies>
+            <!--spring cloud alibaba 2.1.0.RELEASE-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- spring boot 2.2.2-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
