--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
         <module>cloudalibaba-provider-payment</module>
         <module>cloudalibaba-provider-payment9002</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
+        <module>cloudalibaba-sentinel-service8401</module>
+        <module>cloudalibaba-consumer-nacos-order</module>
+        <module>cloudalibaba-provider-payment9003</module>
+        <module>cloudalibaba-provider-payment9004</module>
+        <module>cloudalibaba-consumer-nacos-order84</module>
 
     </modules>
     <packaging>pom</packaging>
