--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
         <module>cloudalibaba-provider-payment9003</module>
         <module>cloudalibaba-provider-payment9004</module>
         <module>cloudalibaba-consumer-nacos-order84</module>
+        <module>cloudalibaba-consumer-nacos-order84</module>
+        <module>cloud-config-center</module>
+        <module>cloud-config-client</module>
 
     </modules>
     <packaging>pom</packaging>
